Refactor and make a separate class for SpreadsheetManager